--- a/src/view/generics-components.css
+++ b/src/view/generics-components.css
@@ -11,7 +11,7 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 32px);
   min-height: 550px;
 }
 
