--- a/src/view/payment.css
+++ b/src/view/payment.css
@@ -7,7 +7,7 @@
 }
 
 .payment-window .payment-value{
-  width: 53%;
+  width: 80%;
   height: 66px;
   margin-top: 40px;
   font-size: 48px;
